8208277: Code cache heap (-XX:ReservedCodeCacheSize) doesn't work with 1GB LargePages

Use huge pages for code cache if ReservedCodeCacheSize == InitialCodeCacheSize

Reviewed-by: kvn